--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "package.json": "^2.0.1",
     "zeppelin-solidity": "^1.5.0"
   }
 }
