--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "ethercontract",
-  "version": "1.0.0",
+  "name": "cf-contracts",
+  "version": "0.0.1",
   "description": "",
   "main": "truffle-config.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pipeline": "truffle develop --log & truffle deploy --reset --network trufflenetwork && truffle test --network trufflenetwork"
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-register": "^6.23.0",
+    "chai": "^4.1.2",
+    "concurrently": "^3.5.1",
+    "truffle": "^4.0.6"
+  },
   "dependencies": {
     "package.json": "^2.0.1",
-    "zeppelin-solidity": "^1.5.0"
+    "zeppelin-solidity": "^1.6.0"
   }
 }
